--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 
 <body class="mat-typography">
   <app-root></app-root>
+  <script src="https://kit.fontawesome.com/a3f5e02abf.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
